# stark-challenge

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  gcp_cloud_build.yaml  openapi.yaml  pyproject.toml
.github/workflows/: quality.yml
src/: config.py  main.py
src/core/: invoice.py  router.py
src/infra/: invoice_repository.py  stark_bank.py
src/schemas/: invoice.py
tests/: test_invoice.py  test_invoice_repository.py
